[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
greenlet = "^3.2.1"
asyncio = "^3.4.3"
alembic = "^1.15.2"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
pandas = "^2.2.3"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
prometheus-fastapi-instrumentator = "^7.1.0"
